Lisatingimus, et ei saada LIMIT -> react() tihemini kui mingi väärtus.

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 	</script>
 </head>
 <body>
-	<audio id="audio_player" controls ></audio>
+	<audio id="audio_player" controls src="test7.mp3"></audio>
     <form>
 	<label>SVG</label>
-    <input type="file" id="file" />
+    <input type="file" id="file" value="j2nes1.svg"/>
 	<label>Audio</label>
 	<input id="audio_file" type="file" accept="audio/*" />
     </form>
