Lisasin keskmise helitugevuse meter.averageRms

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
 </head>
 <body>
 	<audio id="audio_player" controls src="test7.mp3"></audio>
+	<br>
+	<input type="range" id="averagerms" min="0" max="0.5" step="0.01" >Keskmine helitugevus</input><br>
+    <br>
     <form>
 	<label>SVG</label>
     <input type="file" id="file" value="j2nes1.svg"/>
