--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
 		<br>
 		<input type="range" class="center" id="averagefreq" min="20" max="2000" step="1" >Keskmine saegdus</input>	
 		 <br>
+		 <br>
+		<input type="range" class="center" id="sensitivity" min="0" max="1" step="0.05" value="0.5">Tundlikkus</input>	
+		 <br>
 		<form class="center">
 		<label>SVG</label>
 		<input type="file" id="file" value="j2nes1.svg"/>
