Fix: can play music even on audio failure.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			window.addEventListener('resize', onResize);
 		});
 		
-		var file = document.getElementById('file');
+		/*var file = document.getElementById('file');
 		file.addEventListener('change', function (event) {
 		
 			var files = event.target.files;
@@ -67,7 +67,7 @@
 					});
 				}
 			}
-		});
+		});*/
 	}
 	function setupSVG(){
 		leftEar = project.getItem( { name: "left-ear" });
